$Id$
===============================================================

253	Luke Howard <lukeh@padl.com>

	* fix crasher if an empty buffer is passed to
	  initgroups (glibc NSS only)
	* fix for BUG#283: netgroup assertion failure in
	  Solaris mountd

252	Luke Howard <lukeh@padl.com>

	* doc/lookup_nssldap.c: rewrite for autofs-4.1.3

251	Luke Howard <lukeh@padl.com>

	* remove doc/rfc2307.txt, it is available from
	  http://www.ietf.org/rfc/rfc2307.txt
	* make objectClass a mappable attribute

250	Luke Howard <lukeh@padl.com>

	* don't use static _nss_ldap_no_members buffer,
	  causes crash when nss_ldap is unloaded and memory
	  is still referenced
	* fix for BUG#249: tcsh closes file descriptors,
	  confuses nss_ldap and hangs (from David Houlder)
	* fix for BUG#257: initgroups() broken in RFC2307bis
	  support disabled
	* fix for BUG#261: sslpath example wrong
	* fix for BUG#263: compile do_triple_permutations()
	  when IRS enabled

249	Luke Howard <lukeh@padl.com>

	* fix for BUG#253: build broken on AIX
	* fix for BUG#255: deadlock in initgroups

248	Luke Howard <lukeh@padl.com>

	* fix regression in per-objectclass attribute mapping
	  introduced in nss_ldap-246

247	Luke Howard <lukeh@padl.com>

	* double-check *ld != NULL even if mapped eror return
	  from ldap_initialize() returns NSS_SUCCESS

246	Luke Howard <lukeh@padl.com>

	* paged results and RFC2307bis support are now always
	  compiled in; they are by default disabled unless
	  you configured with --enable-paged-results and
	  --enable-rfc2307bis, respectively. See nss_ldap(5)
	  for configuration options.
	* fix for BUG#219: paged results delivers wrong results
	* fix for BUG#222: use asynchronous start TLS if
	  available, using bind_timeout value
	* fix for BUG#235: make DNS SRV lookup domain
	  configurable (nss_srv_domain)
	* fix for BUG#240: return "*" rather than "x" for
	  userPassword if not present
	* fix for BUG#245: paged results broken since nss_ldap-241