@@ -85,7 +85,7 @@ aix*) if test "$ac_cv_prog_gcc" = "yes"; then
 solaris*) if test "$ac_cv_prog_gcc" = yes; then
     nss_ldap_so_LD="/usr/ccs/bin/ld"
   fi
-  nss_ldap_so_LDFLAGS="-Bdynamic -M \$(srcdir)/exports.solaris -G" ;;
+  nss_ldap_so_LDFLAGS="-Bdirect -z nodelete -Bdynamic -M \$(srcdir)/exports.solaris -G" ;;
 hpux*) if test "$ac_cv_prog_gcc" = yes; then
     nss_ldap_so_LD="/bin/ld"
   fi
